# yves

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md  capture_tmux_panes.nu  default.nix  docker.nix  file_monitor.py  justfile  main.py  pyproject.toml  shell.nix  tmux_monitor.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
lib/: capture_tmux_panes.py  cfg.py  file_system_watcher.py  file_watcher.py  llm.py  llm_prompter.py  llm_summarizer.py  signal.py  tmux.py  tmux_watcher.py  watcher.py
modules/: home-manager.nix
npins/: sources.json
pkgs/: yves.nix
prompts/: many_system_prompt.txt  single_system_prompt.txt
scripts/: file_monitor.py  tmux_monitor.py
src/lib/: cfg.py  check.py  file.py  file_system_watcher.py  interactive.py  llm.py  llm_summarizer.py  signal.py  threading.py  tmux.py  tmux_watcher.py
src/yves/: main.py
src/yves/check/: fs_prompt_example.json
src/yves/prompts/: many_system_prompt.txt  single_system_prompt.txt
test/: file_monitor.py
tests/: test_cfg.py  test_check.py  test_file.py  test_file_system_watcher.py  test_interactive.py  test_llm.py  test_llm_summarizer.py  test_package_data.py  test_tmux.py  test_tmux_watcher.py
tests/samples/: tmux_prompt_example.json
tests/samples/prompts/: merged_prompt_example.json
tests/samples/reports/: original.md  prettier.md
utils/: repo_watcher.py
