[project]
name = "recapify"
version = "0.1.0"
description = "Automatic work report every day"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "--import-mode=importlib",
]
