[project]
name = "yves"
version = "0.1.0"
description = "Your Valuable Efficient Summarizer: automatic work report every day"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
yves = "yves.main:main"

[tool.uv]
package = true
