[project]
name = "yves"
version = "0.1.0"
description = "Your Valuable Efficient Summarizer: automatic work report every day"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "blake3>=1.0.5",
    "litellm>=1.77.0",
    "questionary>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = ["E", "F", "W", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
yves = "yves.main:main"

[tool.uv]
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"yves.prompts" = ["*.txt"]
